updates homepage blurb

--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-10">
               <h1 class="title">Hello.</h1>
-              <p>A quick blurb about me. Some stuff will go here so that I can see how many words will fit in this small column. The quick browns fox jumped over the lazy dog.</p>
+              <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise include Javascript, HTML, CSS and WordPress theme development.</p>
             </div>
             </div>
             </div>
