--- a/template.html
+++ b/template.html
@@ -26,7 +26,7 @@
         </div>
       </header>
       <nav class="hidden-sm">
-              <ul class="nav"><li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#contact" class="contact">Contact</a></li><li><a href="#" class="blog">Blog</a></li>
+              <ul class="nav"><li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
               </ul>
               <!--
               <ul class="nav">
