Moves nav to top, adds svg arrow

--- a/template.html
+++ b/template.html
@@ -9,6 +9,18 @@
     <link type="text/css" rel="stylesheet" href="css/main.css">
   </head>
   <body>
+          <nav class="hidden-sm">
+              <ul class="nav"><li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
+              </ul>
+              <!--
+              <ul class="nav">
+                <li class="social"><a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a></li>
+                <li class="social"><a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a></li>
+                <li class="social"><a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a></li>
+                <li class="social"><a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a></li>
+              </ul>
+              -->
+      </nav>
       <header>
         <div class="toggle-menu hidden-md">Menu</div>
         <div class="container">
@@ -24,19 +36,20 @@
             </div>
           </div>
         </div>
+        <div style="width: 100px; margin: 0 auto;">
+        <svg width="100px" height="100px" viewBox="0 0 100 100"
+     xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <desc>down arrow</desc>
+
+        <polyline fill="none" stroke="rgba(255, 255, 255, 0.5)" stroke-width="2" 
+                  points="10,10 50,30 90,10" />
+        <polyline fill="none" stroke="rgba(0, 0, 0, 0.5)" stroke-width="2" 
+                  points="10,12 50,32 90,12" />
+
+      </svg>
+      </div>
       </header>
-      <nav class="hidden-sm">
-              <ul class="nav"><li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
-              </ul>
-              <!--
-              <ul class="nav">
-                <li class="social"><a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a></li>
-                <li class="social"><a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a></li>
-                <li class="social"><a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a></li>
-                <li class="social"><a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a></li>
-              </ul>
-              -->
-      </nav>
+
 
       <section id="about">
         <div class="box">
