Updates to new layout

--- a/template.html
+++ b/template.html
@@ -1,142 +1,172 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Portfolio Template</title>
-    <meta name="description" content="Front-End Web Developer portfolio for Erik Lopez">
-    <meta name="author" content="Erik Lopez">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-        <nav class="hidden-sm">
-            <ul class="nav"><li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
-            </ul>
-              <!--
-              <ul class="nav">
-                <li class="social"><a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a></li>
-                <li class="social"><a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a></li>
-                <li class="social"><a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a></li>
-                <li class="social"><a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a></li>
-              </ul>
-              -->
-      </nav>
-      <header>
-        <div class="toggle-menu hidden-md">
-          <svg width="50px" height="50px" viewBox="0 0 50 50"
-          xmlns="http://www.w3.org/2000/svg" version="1.1">
-            <desc>Menu</desc>
-            <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" 
-                      x1="10" y1="10" x2="50" y2="10" />
-<line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" 
-                      x1="10" y1="22" x2="50" y2="22" />
-<line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" 
-                      x1="10" y1="34" x2="50" y2="34" />
-          </svg>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-2">
-              <img src="img/el-logo-bright.svg" class="logo" alt="Erik Lopez logo">
-            </div>
-            <div class="col-10 blurb">
-              <h1 class="title">Hello.</h1>
-              <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>, <a href="#work" class="work">view work samples</a>, <a href="/blog" class="blog">read the blog</a> or <a href="#contact" class="contact">get in touch</a>.</p>
-              <p></p>
-            </div>
-          </div>
-        </div>
-        <ul class="nav">
-                <li class="social"><a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a></li>
-                <li class="social"><a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a></li>
-                <li class="social"><a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a></li>
-                <li class="social"><a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a></li>
-              </ul>
-        <div style="width: 100px; margin: 2em auto;">
-          <a href="#">
-        <svg width="100px" height="50px" viewBox="0 0 100 50"
-     xmlns="http://www.w3.org/2000/svg" version="1.1">
-        <desc>down arrow</desc>
 
-        <polyline fill="none" stroke="rgba(255, 255, 255, 0.5)" stroke-width="2" 
-                  points="10,10 50,30 90,10" />
-        <polyline fill="none" stroke="rgba(0, 0, 0, 0.5)" stroke-width="2" 
-                  points="10,12 50,32 90,12" />
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio Template</title>
+  <meta name="description" content="Front-End Web Developer portfolio for Erik Lopez">
+  <meta name="author" content="Erik Lopez">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="css/main.css">
+</head>
 
-      </svg>
-          </a>
+<body>
+    <div class="toggle-menu hidden-md">
+      <svg width="60px" height="44px" viewBox="0 0 60 44" xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <desc>Menu</desc>
+        <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" x1="10" y1="10" x2="50" y2="10" />
+        <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" x1="10" y1="22" x2="50" y2="22" />
+        <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" x1="10" y1="34" x2="50" y2="34" /></svg></div>
+  <nav class="hidden-sm">
+    <ul class="nav easing-transition">
+      <li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
+    </ul>
+  </nav>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-2">
+          <img src="img/el-logo-bright.svg" class="logo" alt="Erik Lopez logo">
+        </div>
+        <div class="col-10 blurb">
+          <h1 class="title">Hello.</h1>
+          <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
+            include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
+            <a href="#work" class="work">view work samples</a>, <a href="/blog" class="blog">read the blog</a> or
+            <a href="#contact"
+              class="contact">get in touch</a>.</p>
+        </div>
       </div>
-      </header>
+    </div>
+    <ul class="nav">
+      <li class="social">
+        <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a>
+      </li>
+      <li class="social">
+        <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a>
+      </li>
+      <li class="social">
+        <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a>
+      </li>
+      <li class="social">
+        <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a>
+      </li>
+    </ul>
+    <div style="width: 100px; margin: 2em auto;">
+      <a href="#">
+        <svg width="100px" height="50px" viewBox="0 0 100 50" xmlns="http://www.w3.org/2000/svg" version="1.1">
+          <desc>down arrow</desc>
+
+          <polyline fill="none" stroke="rgba(255, 255, 255, 0.5)" stroke-width="2" points="10,10 50,30 90,10" />
+          <polyline fill="none" stroke="rgba(0, 0, 0, 0.5)" stroke-width="2" points="10,12 50,32 90,12" />
+
+        </svg>
+      </a>
+    </div>
+  </header>
 
 
-      <section id="about">
-        <div class="box">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis suscipit fermentum. <a href="#">Curabitur imperdiet malesuada sem vitae bibendum.</a> Vivamus sed enim ac nunc tristique feugiat a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna, vel convallis tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut leo id risus bibendum pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse lacinia accumsan porttitor. </p>
-              <p><a href="#">This is a link.</a></p>
-            </div>
+  <section id="about">
+    <div class="box">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis
+              suscipit fermentum. <a href="#">Curabitur imperdiet malesuada sem vitae bibendum.</a> Vivamus sed enim ac nunc
+              tristique feugiat a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna,
+              vel convallis tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut
+              leo id risus bibendum pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+              lacinia posuere semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse
+              lacinia accumsan porttitor. </p>
+            <p><a href="#">This is a link.</a></p>
           </div>
         </div>
-        </div>
-      </section>
-      <section id="work">
-        <div class="box">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h2>Work Samples</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4"><div class="sample"></div></div>
-            <div class="col-4"><div class="sample"></div></div>
-            <div class="col-4"><div class="sample"></div></div>
-          </div>
-          <div class="row">
-            <div class="col-4"><div class="sample"></div></div>
-            <div class="col-4"><div class="sample"></div></div>
-            <div class="col-4"><div class="sample"></div></div>
+      </div>
+    </div>
+  </section>
+  <section id="work">
+    <div class="box">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <!--<h2>Work Samples</h2>-->
           </div>
         </div>
-        </div>
-      </section>
-      <section id="contact">
-        <div class="box">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h2>Contact</h2>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis suscipit fermentum. Curabitur imperdiet malesuada sem vitae bibendum. Vivamus sed enim ac nunc tristique feugiat a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna, vel convallis tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut leo id risus bibendum pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse lacinia accumsan porttitor. </p>
-            </div>
+        <div class="row">
+          <div class="col-4">
+            <div class="sample"></div>
+          </div>
+          <div class="col-4">
+            <div class="sample"></div>
+          </div>
+          <div class="col-4">
+            <div class="sample"></div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-4">
+            <div class="sample"></div>
+          </div>
+          <div class="col-4">
+            <div class="sample"></div>
+          </div>
+          <div class="col-4">
+            <div class="sample"></div>
+          </div>
         </div>
-      </section>
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 center">
-              <!--<ul class="nav">
+      </div>
+    </div>
+  </section>
+  <section id="contact">
+    <div class="box">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <!--<h2>Contact</h2>-->
+            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis
+              suscipit fermentum. Curabitur imperdiet malesuada sem vitae bibendum. Vivamus sed enim ac nunc tristique feugiat
+              a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna, vel convallis
+              tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut leo id risus bibendum
+              pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse lacinia
+              accumsan porttitor. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 center">
+          <!--<ul class="nav">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>
               </ul>-->
-              <ul class="nav">
-                <li class="social"><a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a></li>
-                <li class="social"><a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a></li>
-                <li class="social"><a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a></li>
-                <li class="social"><a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a></li>
-              </ul>
-              <p class="col-12 colophon">Unless noted otherwise, all content &copy; Erik Lopez</p>
-            </div>
-          </div>
+          <ul class="nav">
+            <li class="social">
+              <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a>
+            </li>
+            <li class="social">
+              <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a>
+            </li>
+            <li class="social">
+              <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a>
+            </li>
+            <li class="social">
+              <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a>
+            </li>
+          </ul>
+          <p class="col-12 colophon">Unless noted otherwise, all content &copy; Erik Lopez</p>
         </div>
-      </footer>
+      </div>
+    </div>
+  </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
