Adds favicons, adjusts layout

--- a/template.html
+++ b/template.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Front-End Web Developer portfolio for Erik Lopez">
   <meta name="author" content="Erik Lopez">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-title" content="ErikLopez.Work">
+  <meta name="application-name" content="ErikLopez.Work">
+  <meta name="theme-color" content="#394053">
   <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 
@@ -26,10 +33,10 @@
   <header id="top">
     <div class="container">
       <div class="row">
-        <div class="col-2">
+        <div class="col-3">
           <img src="img/el-logo-bright.svg" class="logo" alt="Erik Lopez logo">
         </div>
-        <div class="col-10 blurb">
+        <div class="col-9 blurb">
           <h1 class="title">Hello.</h1>
           <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
             include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
@@ -69,6 +76,7 @@
 
   <section id="about">
     <div class="box">
+      <h2 class="title">About</h2>
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -98,12 +106,8 @@
     </div>
   <section id="work">
     <div class="box">
+      <h2 class="title">Work Samples</h2>
       <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <!--<h2>Work Samples</h2>-->
-          </div>
-        </div>
         <div class="row">
           <div class="col-4">
             <div class="sample"></div>
@@ -142,10 +146,11 @@
     </div>
   <section id="contact">
     <div class="box">
+      <h2 class="title">Contact</h2>
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <!--<h2>Contact</h2>-->
+            
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis
               suscipit fermentum. Curabitur imperdiet malesuada sem vitae bibendum. Vivamus sed enim ac nunc tristique feugiat
               a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna, vel convallis
