--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
   <meta name="apple-mobile-web-app-title" content="ErikLopez.Work">
   <meta name="application-name" content="ErikLopez.Work">
   <meta name="theme-color" content="#394053">
-  <link type="text/css" rel="stylesheet" href="css/main.css">
+  <link type="text/css" rel="stylesheet" href="sass/main.css">
 </head>
 
 <body>
