Adjusts Work section

--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
   <link type="text/css" rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class="home">
     <div class="toggle-menu">
       <div class="container">
       <svg width="60px" height="44px" viewBox="0 0 60 44" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -27,7 +27,7 @@
         <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" x1="10" y1="34" x2="50" y2="34" /></svg></div></div>
   <nav>
     <ul class="nav easing-transition">
-      <li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="#" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
+      <li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="blog.html" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
     </ul>
   </nav>
   <header id="top">
@@ -40,7 +40,7 @@
           <h1 class="title">Hello.</h1>
           <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
             include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
-            <a href="#work" class="work">view work samples</a>, <a href="/blog" class="blog">read the blog</a> or
+            <a href="#work" class="work">view work samples</a>, <a href="blog.html" class="blog">read the blog</a> or
             <a href="#contact"
               class="contact">get in touch</a>.</p>
         </div>
@@ -108,28 +108,37 @@
     <div class="box">
       <h2 class="title">Work Samples</h2>
       <div class="container">
+
         <div class="row">
-          <div class="col-4">
+          <div class="col-8">
             <div class="sample"></div>
           </div>
           <div class="col-4">
-            <div class="sample"></div>
-          </div>
-          <div class="col-4">
-            <div class="sample"></div>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
           </div>
         </div>
+
         <div class="row">
-          <div class="col-4">
+          <div class="col-8">
             <div class="sample"></div>
           </div>
           <div class="col-4">
-            <div class="sample"></div>
-          </div>
-          <div class="col-4">
-            <div class="sample"></div>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-8">
+            <div class="sample"></div>
+          </div>
+          <div class="col-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
+          </div>
+        </div>
+
       </div>
     </div>
   <div class="down-arrow">
