--- a/template.html
+++ b/template.html
@@ -46,20 +46,7 @@
         </div>
       </div>
     </div>
-    <ul class="nav social">
-      <li>
-        <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a>
-      </li>
-      <li>
-        <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a>
-      </li>
-      <li>
-        <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a>
-      </li>
-      <li>
-        <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a>
-      </li>
-    </ul>
+    
     <div class="down-arrow">
       <a href="#about">
         <svg width="100px" height="50px" viewBox="0 0 100 50" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -194,20 +181,21 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>
               </ul>-->
-          <ul class="nav social">
-            <li>
-              <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a>
-            </li>
-            <li>
-              <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a>
-            </li>
-            <li>
-              <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a>
-            </li>
-            <li>
-              <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a>
-            </li>
-          </ul>
+    <ul class="nav social">
+      <li>
+        <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
+      </li>
+      <li>
+        <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
+      </li>
+      <li>
+        <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"><span>CodePen</span></a>
+      </li>
+      <li>
+        <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"><span>freeCodeCamp</span></a>
+      </li>
+      
+    </ul>
           <p class="col-12 colophon">Unless noted otherwise, all content &copy; Erik Lopez</p>
         </div>
       </div>
