Updates template page title

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Template</title>
+  <title>Portfolio Template - Blog</title>
   <meta name="description" content="Front-End Web Developer portfolio for Erik Lopez">
   <meta name="author" content="Erik Lopez">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,20 +38,6 @@
         </div>
       </div>
     </div>
-    <ul class="nav social">
-      <li>
-        <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"></a>
-      </li>
-      <li>
-        <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"></a>
-      </li>
-      <li>
-        <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"></a>
-      </li>
-      <li>
-        <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"></a>
-      </li>
-    </ul>
   </header>
 
   
