Adds sample link and template page

--- a/template.html
+++ b/template.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-9 blurb">
           <h1 class="title">Hello.</h1>
-          <p>This is the online portfolio or Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
+          <p>This is the online portfolio of Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
             include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
             <a href="#work" class="work">view work samples</a>, <a href="blog.html" class="blog">read the blog</a> or
             <a href="#contact"
@@ -98,7 +98,16 @@
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"></div>
+            <div class="sample"><a href="sample_1.html"><img src="img/samples/screen_ksj_1280x695.png"></a></div></div>
+          <div class="col-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-8">
+            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
           </div>
           <div class="col-4">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
@@ -108,7 +117,7 @@
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"></div>
+            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
           </div>
           <div class="col-4">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
@@ -118,7 +127,26 @@
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"></div>
+            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div></div>
+          <div class="col-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-8">
+            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
+          </div>
+          <div class="col-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
+              semper.
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-8">
+            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
           </div>
           <div class="col-4">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
