Removes unneeded class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="img/el-logo-bright.svg" class="logo" alt="Erik Lopez logo">
         </div>
         <div class="col-9 blurb">
-          <h1 class="title easing-transition">Hello.</h1>
+          <h1 class="title">Hello.</h1>
           <p>This is the online portfolio of Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
             include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
             <a href="#work" class="work">view work samples</a>, <a href="blog.html" class="blog">read the blog</a> or
