Removes blog link, updates about copy

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <line stroke="rgba(255, 255, 255, 1.0)" stroke-width="3" x1="10" y1="34" x2="50" y2="34" /></svg></div></div>
   <nav>
     <ul class="nav easing-transition">
-      <li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><li><a href="blog.html" class="blog">Blog</a></li><li><a href="#contact" class="contact">Contact</a></li>
+      <li><a href="#about" class="about">About</a></li><li><a href="#work" class="work">Work</a></li><!-- <li><a href="blog.html" class="blog">Blog</a></li> --><li><a href="#contact" class="contact">Contact</a></li>
     </ul>
   </nav>
   <header id="top">
@@ -40,7 +40,7 @@
           <h1 class="title">Hello.</h1>
           <p>This is the online portfolio of Erik Lopez. A front-end developer with over 10 years of experience. Areas of expertise
             include Javascript, HTML, CSS and WordPress theme development. You can <a href="#about" class="about">learn more about Erik</a>,
-            <a href="#work" class="work">view work samples</a>, <a href="blog.html" class="blog">read the blog</a> or
+            <a href="#work" class="work">view work samples</a><!-- ,<a href="blog.html" class="blog">read the blog</a> --> or
             <a href="#contact"
               class="contact">get in touch</a>.</p>
         </div>
@@ -67,14 +67,16 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis
-              suscipit fermentum. <a href="#">Curabitur imperdiet malesuada sem vitae bibendum.</a> Vivamus sed enim ac nunc
-              tristique feugiat a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna,
-              vel convallis tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut
-              leo id risus bibendum pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-              lacinia posuere semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse
-              lacinia accumsan porttitor. </p>
-            <p><a href="#">This is a link.</a></p>
+            <img src="img/prisma-portrait.jpg" alt="Erik Lopez portrait" style="float: right;">
+            <p>Hi, my name is Erik. I make web sites.<p>
+
+<p><em>Why does a web designer turned web developer have a basic one-page html site? </em></p>
+
+<p>Good question. I have ideas for a portfolio site. Some cool ones too, but I seem to always want to work on anything else in my free time besides my own web site.</p>
+
+<p>For example, sometimes I like to work on FreeCodeCamp projects, or learn more about JavaScript, maybe read up on modern Front-end Web Development, or just read a good book.</p>
+
+<p>So this will be a work in progress. Think of this site as a placeholder while something more interesting is brewing.</p>
           </div>
         </div>
       </div>
