Updates index title, social links, portrait img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Template</title>
+  <title>ErikLopez.work - Front-End Web Developer Portfolio</title>
   <meta name="description" content="Front-End Web Developer portfolio for Erik Lopez">
   <meta name="author" content="Erik Lopez">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img src="img/prisma-portrait.jpg" alt="Erik Lopez portrait" style="float: right;">
+            <img src="img/prisma-portrait.jpg" alt="Erik Lopez portrait" class="right portrait">
             <p>Hi, my name is Erik. I make web sites.<p>
 
 <p><em>Why does a web designer turned web developer have a basic one-page html site? </em></p>
@@ -213,16 +213,16 @@
               </ul>-->
     <ul class="nav social">
       <li>
-        <a href="#" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
+        <a href="https://www.linkedin.com/in/ealopez/" target="_blank" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
       </li>
       <li>
-        <a href="#" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
+        <a href="http://codepen.io/pixelador/" target="_blank" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
       </li>
       <li>
-        <a href="#" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"><span>CodePen</span></a>
+        <a href="http://codepen.io/pixelador/" target="_blank" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"><span>CodePen</span></a>
       </li>
       <li>
-        <a href="#" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"><span>freeCodeCamp</span></a>
+        <a href="https://www.freecodecamp.com/pixelador" target="_blank" class="fcc"><img src="img/freecodecamp-logo.svg" alt="Free Code Camp logo"><span>freeCodeCamp</span></a>
       </li>
       
     </ul>
